<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">HomA</string>
    <string name="titleActivityQuickpublishNfc">"NFC Quickpublish"</string>
        <string name="titleActivityQuickpublishNotification">"Notification Quickpublish"</string>
    
    <string name="titleActivityMain">HomA</string>
    <string name="titleActivityPreferences">"Settings"</string>
    <string name="preferencesServerTitle">"Server"</string>
    <string name="preferencesServerAddress">"Server address"</string>
    <string name="preferencesServerPort">"Server port"</string>
    <string name="preferencesServerCancel">"Disconnect"</string>
    <string name="preferencesServerConnect">"Connect"</string>
    <string name="preferencesLicensesTitle">"Licenses"</string>
    <string name="preferencesLicensesSummary">"Details for included software"</string>
    <string name="preferencesLicensesDismiss">"Dismiss"</string>
    <string name="preferencesNotificationSummary">"Display a notification to keep running"</string>
    <string name="preferencesNotificationTitle">"Notification"</string>
    <string name="preferencesVersionTitle">"Version"</string>
    <string name="preferencesQuickpublishTitle">"Quickpublish"</string>
    <string name="preferencesQuickpublishSummary">"Access to commonly used tasks"</string>
   
    
    <string name="preferencesQuickpublishNotificationTitle">"Notification"</string>
    
    <string name="preferencesQuickpublishWidgetTitle">"Widget"</string>
    <string name="nfcWriteDialogWaitingForTag">"Place your phone above a tag to write"</string>
    <string name="nfcWriteDialogTitle">"Write"</string>
    <string name="quickpublishNameInputTitle">"Name"</string>
        <string name="quickpublishAdd">"Add quickpublish"</string>
            <string name="quickpublishEdit">"Edit Quickpublish"</string>
        
    
    <string name="quickpublishPayloadInputTitle">"Payload"</string>
    <string name="quickpublishTopicInputTitle">"Topic"</string>
    <string name="quickpublishRetainedInputTitle">"Retained"</string>
    <string name="quickpublishIconInputTitle">"Icon"</string>
    
            <string name="connectivityConnecting">"Connecting"</string>
    <string name="connectivityConnected">"Connected"</string>
    <string name="connectivityDisconnecting">"Disconnecting"</string>
    <string name="connectivityDisconnected">"Disconnected"</string>
    <string name="connectivityDisconnectedUserDisconnect">"Disconnected: By user"</string>
    <string name="connectivityDisconnectedDataDisabled">"Disconnected: Data disabled"</string>
    
    <string name="nfcWriteDialogTagReadOnly">"Tag is read-only"</string>
    <string name="nfcWriteDialogTagFormatedAndWrote">"Formatted tag and wrote message"</string>
    <string name="nfcWriteDialogTagFailedToFormat">"Failed to format tag"</string>
    <string name="nfcWriteDialogTagFailedToWrite">"Failed to write tag"</string>
    <string name="nfcWriteDialogTagNoNDEFSupport">"Tag does not support NDEF format"</string>
    <string name="nfcWriteDialogTagCapacityIs">"Tag capacity is "</string>
    <string name="nfcWriteDialogTagMessageSizeIs">", Message size is "</string>
    <string name="nfcWriteDialogTagNoContent">"No content to write"</string>
    <string name="nfcWriteDialogTagSuccess">"Tag written successfully"</string>
    <string name="nfcWrite">"Write"</string>
    <string name="nfcStartRecording">"Start recording"</string>
    <string name="nfcStopRecording">"Stop recording"</string>
    <string name="actionModeOneSelected">"One item selected"</string>
    <string name="actionModeMoreSelected">"items selected"</string>
    <string name="actionModeDiscardSelected">"Discard selected"</string>
    <string name="add">"Add"</string>
    <string name="cancel">"Cancel"</string>
    <string name="save">"Save"</string>
    <string name="na">"N/A"</string>
    
        <string name="preferencesBrokerUsername">"Username (Broker authentication)"</string>
        <string name="preferencesConnectionSecurity">"Connection security"</string>
    
    <string name="preferencesBrokerPassword">"Password"</string>
    <string name="error">"Error"</string>
    
     <string-array name="connect_options_security">
        <item>None</item>
        <item>TLS</item>
        <item>TLS (Custom Certificate)</item>
    </string-array>
    
   	<string-array name="connect_options_auth">
        <item>Anonymous</item>
        <item>Username/Password</item>
    </string-array>
</resources>