<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <st.alr.homA.PreferencesServer
        android:key="serverPreference"
        android:negativeButtonText="@string/preferencesServerCancel"
        android:positiveButtonText="@string/preferencesServerConnect"
        android:title="@string/preferencesServerTitle" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="runInBackgroundPreference"
        android:summary="@string/preferencesNotificationSummary"
        android:title="@string/preferencesNotificationTitle" />

    <st.alr.homA.support.ImplementedDialogPreference
        android:negativeButtonText=""
        android:positiveButtonText="@string/preferencesLicensesDismiss"
        android:summary="@string/preferencesLicensesSummary"
        android:title="@string/preferencesLicensesTitle"
        android:dialogLayout="@layout/preferences_licenses" />
    
    <Preference
        android:key="versionReadOnly"
        android:title="@string/preferencesVersionTitle" />

</PreferenceScreen>