<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="97"
        android:showAsAction="ifRoom"
        android:title="@string/add">
    </item>
    <item
        android:id="@+id/write"
        android:icon="@drawable/ic_action_write"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/nfcWrite">
    </item>
    <item
        android:id="@+id/recordingStart"
        android:icon="@drawable/ic_action_record_start"
        android:orderInCategory="98"
        android:showAsAction="ifRoom"
        android:title="@string/nfcStartRecording">
    </item>
    <item
        android:id="@+id/recordingStop"
        android:icon="@drawable/ic_action_record_stop"
        android:orderInCategory="98"
        android:showAsAction="ifRoom"
        android:title="@string/nfcStopRecording">
    </item>

</menu>